--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body{
     width: 105vh;
     display: flex;
     background-color: white;
-    
+    background-image:url("backgroundenfermeira.svg")
     background-size: cover;
     animation: animaçao;
     transition: 2s;
